--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 <body>
     <section>
 
-    <div class="navbar">MENU
+    <div class="navbar"> 
+        <h1> Outros Projetos </h1>
         <ul class="menu">
-            <li><a href="" class="fa fa-facebook"></a></li>
-            <li><a href="" class="fa fa-twitter"></a></li>
-            <li><a href="" class="fa fa-linkedin"></a></li>
-            <li><a href="" class="fa fa-google"></a></li>
-            <li><a href="" class="fa fa-rss"></a></li>
-            <li><a href="" class="fa fa-pinterest"></a></li>
-            <li><a href="" class="fa fa-skype"></a></li>
-            <li><a href="" class="fa fa-github"></a></li>
-            <li><a href="" class="fa fa-instagram"></a></li>
+            <li><a href="https://appweatherreactjs.netlify.app/" class="fa fa- fa-terminal" target="_blank" title="React Weather"></a></li>
+            <li><a href="https://lojareactjs.netlify.app/" class="fa fa-terminal"  target="_blank" title="Loja React"></a></li>
+            <li><a href="https://brunodevbandeira.github.io/Blurry-Loading/" target="_blank" class="fa fa-terminal" title="Blurry-Loading"></a></li>
+            <li><a href="https://starwarsjs.netlify.app/?#" class="fa fa-terminal" target="_blank" title="Site Star Wars"></a></li>
+            <li><a href="https://portifoliojs2022.netlify.app/" class="fa fa-terminal" target="_blank" title="Portifolio"></a></li>
+            <li><a href="https://brunodevbandeira.github.io/Sharingan/" class="fa fa-terminal" target="_blank" title="CSS Sharingan"></a></li>
+            <li><a href="https://splitlandingpagejs.netlify.app/#" class="fa fa-terminal" target="_blank" title="LandingPage"></a></li>
+            <li><a href="https://brunodevbandeira.github.io/Contador-JS/" class="fa fa-terminal" target="_blank" title="Contador"></a></li>
+            <li><a href="https://farturahub.herokuapp.com/#/sobre-nos" class="fa fa-terminal" target="_blank" title="FarturaHub"></a></li>
 
         </ul>
     </div>
